<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SA38Team7AD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dept_head_main">DeptHeadMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="dept_head_menu_array">
        <item>Approve Requisition</item>
        <item>Delegate Authority</item>
        <item>Update Department Detail</item>
    </string-array>

    <string name="title_activity_approve_requisition">Requisition Approval</string>
    <string name="title_activity_delegate_authority">Delegate Authority</string>
    <string name="title_activity_update_dept_detail">Update Department Detail</string>
    <string name="title_activity_store_clerk_main">StoreClerkMainActivity</string>

    <string-array name="store_clerk_menu_array">
        <item>Inventory Retrieval</item>
        <item>Disbursement List</item>
        <item>Report Discrepancy</item>
    </string-array>

    <string name="title_activity_navigation_drawer_fragment2">NavigationDrawerFragment2</string>
    <string name="title_activity_retrieve_stationery">Retrieve Stationery</string>
    <string name="title_activity_disburstment_list">Disburstment List</string>
    <string name="title_activity_report_discrepancy">Report Discrepancy</string>
    <string name="collection_point_1">Stationery Store - Administration Building (9.30am)</string>
    <string name="collection_point_2">Management School (11.00am)</string>
    <string name="collection_point_3">Medical School (9.30am)</string>
    <string name="collection_point_4">Engineering School (11.00am)</string>
    <string name="collection_point_5">Science School (9.30am)</string>
    <string name="collection_point_6">University Hospital (11.00am)</string>
    <string name="select_rep">Select Representative :</string>
    <string name="representative_text">Representative :</string>
    <string name="collection_point_text">Collection Point :</string>
    <string name="select_cp">Select Collection Point :</string>
    <string name="save">Save</string>

</resources>
